--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,38 +9,50 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.2",
-    "js-cookie": "^3.0.5",
     "react-hook-form": "^7.48.2",
-    "react-query": "^3.39.3",
-    "@hookform/resolvers": "^3.3.2",
-    "yup": "^1.3.3",
     "react-hot-toast": "^2.4.1",
-    "clsx": "^2.0.0"
+    "react-query": "^3.39.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "@playwright/test": "^1.53.1",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/js-cookie": "^3.0.6",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.4",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
+    "lucide-react": "^0.525.0",
+    "postcss": "^8.4.32",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3"
   }
 }
